# ansible-fileserver

./: .gitignore  Vagrantfile  ansible.cfg  bootstrap.sh  bootstrap.yml  hosts  playbook.yml  pyproject.toml  readme.md  updatekernel.yml
group_vars/: all
host_vars/: vagrant
roles/common/defaults/: main.yml
roles/common/files/: rc.local  sysctl.conf
roles/common/handlers/: main.yml
roles/common/tasks/: ethernet.yml  kernel.yml  main.yml  network.yml  ntp.yml  security.yml  ssmtp.yml  ufw.yml  users.yml
roles/common/templates/: etc_fail2ban_jail.local.j2  ssmtp.conf.j2
roles/docker/tasks/: docker.yml  main.yml  nvidia.yml
roles/libvirt/defaults/: main.yml
roles/libvirt/tasks/: libvirt.yml  main.yml
roles/libvirt/templates/: Windows.xml.j2
roles/powermanagement/defaults/: main.yml
roles/powermanagement/files/: 0001-powernap-allow-byuuid.patch  69-hdparm.rules  90-local-n54l.rules  recommend.conf
roles/powermanagement/handlers/: main.yml
roles/powermanagement/tasks/: hdparm.yml  main.yml  nvidia.yml  powernap.yml  tuned.yml
roles/powermanagement/templates/: config.j2  hdparm.conf.j2
roles/samba/defaults/: main.yml
roles/samba/handlers/: main.yml
roles/samba/tasks/: main.yml  samba.yml
roles/samba/templates/: smb.conf.j2
roles/storage/defaults/: main.yml
roles/storage/files/: btrfs-scrub  sec  sec.conf  smartd.conf
roles/storage/handlers/: main.yml
roles/storage/tasks/: aufs.yml  btrfs.yml  directories.yml  fstab.yml  main.yml  mergerfs.yml  mhddfs.yml  monitor.yml
