[tool.poetry]
name = "ansible-fileserver"
version = "0.1.0"
description = ""
authors = ["Alexander Frenzel <alexander.frenzel@rovco.com>"]

[tool.poetry.dependencies]
python = "^3.7"
ansible = "^2.7"
jinja2 = "^2.10"
pyyaml = "^5.1"
passlib = "^1.7"
libvirt-python = "^5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
